<resources>
    <string name="app_name">BookKaro</string>
    <string name="welcome">Welcome to BookKaro</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in BookKaro now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string-array name="bus">
        <item>Select Route</item>
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Kolkata</item>
        <item>Chennai</item>
    </string-array>
</resources>