<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:src="@drawable/logo"
        android:background="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="60dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_weight="1"
        android:id="@+id/btnlogin"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="15dp"
        android:text="@string/btn_link_to_register"
        android:textColor="#000000"
        android:textSize="20dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/register"
        android:layout_weight="1"
        android:id="@+id/btnregister"
        />


</LinearLayout>